Fixed #1119396 - Radio checkmarks misaligned

--- a/public/friendlycode/css/editor.less
+++ b/public/friendlycode/css/editor.less
@@ -479,8 +479,11 @@
         background-repeat: repeat-x;
         background-position: left center;
 
+        padding-left: 0px;
+        padding-top: 7px;
+
         color: black;
-        width: 10px;
+        min-width:22px;
         height: 10px;
         line-height: 10px;
 
